[package]
name = "continue_notation_macro"
version = "0.1.0"
authors = ["Edmund Smith <edmund.pd.smith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

proc-macro2 = "1.0.0"
syn = {version = "1.0.0", features = ["full","extra-traits","fold"]}
quote = "1.0"

[lib]
proc-macro = true
